# RubiksCube-rs

./: Cargo.toml  README.md  architecture.mmd  config.txt  research.md  test_cubes_small.txt  test_pos_big.txt  timings.mmd
.github/: copilot-instructions.md
benches/: math_bench.rs  twist_bench.rs
src/: benchmark.rs  corners.rs  correlation.rs  coset_solver.rs  create_test_pos.rs  cube.rs  cubies.rs  edges.rs  gui.rs  lib.rs  main.rs  math.rs  multi_twister.rs  stored_tables.rs  subset.rs  tables.rs  twist.rs  twist_generator.rs  twist_set.rs  twister.rs  two_phase.rs
src/cubies/: corners.rs  edges.rs  math.rs  mod.rs  modvec.rs  orientation.rs  permutation.rs  rotation.rs  test.rs  twist.rs  twist_generator.rs  twist_set.rs
src/index/: corner_index.rs  coset_index.rs  cube.rs  cube_index.rs  mod.rs  subset_cube.rs  subset_index.rs  subset_twister.rs  twister.rs
src/process_tuning/: core_bindings.rs  mod.rs  process_priority.rs
src/table/: config_file.rs  direction_table.rs  distance_table.rs  mod.rs  stored_tables.rs
src/twister/: mod.rs  multi_twister.rs
