[package]
name = "rubikscube"
version = "0.1.0"
edition = "2024"

[dependencies]
num-format = "0.4.4"
rand = "0.10.1"
rayon = "1.12.0"
plotters = { version = "0.3" }
kiss3d = { version = "0.41.0", features = ["egui"] }

[dev-dependencies]
itertools = "0.14"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "correlation"
path = "src/correlation.rs"

[[bin]]
name = "gui"
path = "src/gui.rs"

[[bin]]
name = "create"
path = "src/create_test_pos.rs"

