[package]
name = "rubikscube"
version = "0.1.0"
edition = "2024"

[dependencies]
num-format = "0.4.4"
rand = "0.10.2"
rayon = "1.12.0"
plotters = { version = "0.3" }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading"] }
libc = "0.2.186"

[dev-dependencies]
itertools = "0.15.0"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "create"
path = "src/create_test_pos.rs"

# [profile.release]
# codegen-units = 1
# lto = "fat"
# panic = "abort"
# strip = "symbols"
# incremental = false
